# colordots

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: splitter.hpp
scripts/: devcloud_cpu.sh  devcloud_gpu.sh  display.sh  display_hdr.sh  env.sh  ffmpeg_build.sh  ffmpeg_raw_rx.sh  ffmpeg_raw_tx.sh  ffmpeg_rx.sh  ffmpeg_test.sh  ffmpeg_tx.sh  gen_crop_info.sh  splitter_build.sh  splitter_env.sh
src/: CMakeLists.txt  splitter.cpp
tests/: CMakeLists.txt  splitter_test.cpp
